force-app/main/default/objects/PoorTax__c/PoorTax__c.object-meta.xml
<CustomObject>
    <label>PoorTax</label>
    <pluralLabel>PoorTaxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>PoorTax Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>