force-app/main/default/objects/PoorTax__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>Current</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>