force-app/main/default/objects/PoorTax__c/fields/RangeLimitMax__c.field-meta.xml
<CustomField>
    <fullName>RangeLimitMax__c</fullName>
    <label>RangeLimitMax</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>