force-app/main/default/objects/PoorTax__c/fields/Tax_eff__c.field-meta.xml
<CustomField>
    <fullName>Tax_eff__c</fullName>
    <label>Tax eff</label>
    <type>Lookup</type>
    <referenceTo>Tax_eff__c</referenceTo>
    <relationshipName>PoorTax_Tax_eff</relationshipName>
</CustomField>