force-app/main/default/objects/PoorTax__c/fields/Tax_income__c.field-meta.xml
<CustomField>
    <fullName>Tax_income__c</fullName>
    <label>Tax income</label>
    <type>Lookup</type>
    <referenceTo>Tax_income__c</referenceTo>
    <relationshipName>PoorTax_Tax_income</relationshipName>
</CustomField>